<resources>
    <string name="app_name" translatable="false">Memosyne</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="overview_fragment_label">Memos</string>
    <string name="add_memo_fragment_label">Edit Memo</string>
    <string name="settings_fragment_label">Settings</string>

    <string name="description_fab">Fab for adding a memo</string>
    <string name="memo_title_hint">Memo title</string>
    <string name="add_a_new_memo_button">Add memo</string>
    <string name="remove_memo_button_label">Remove the Memo</string>
    <string name="edit_memo_button_text">Edit Memo</string>

    <string name="theme_array_label_follow_system">Follow system</string>
    <string name="theme_array_label_light_mode">Light Mode</string>
    <string name="theme_array_label_dark_mode">Dark Mode</string>
    <string name="preferences_title_general">General</string>
    <string name="preference_theme_title" translatable="false">Theme</string>
    <string name="about_me_menu_title">About Me</string>
    <string name="snackbar_title_needed">You need to give the memo a title!</string>
    <string name="author_name" translatable="false">Maximilian Schwärzler</string>
    <string name="author_portrait_description">A portrait of the app\'s author</string>
    <string name="memo_content_hint" translatable="false">Memo</string>
    <string name="link_github_profile" translatable="false">https://github.com/magical-obama</string>
    <string name="link_instagram_profile" translatable="false">https://www.instagram.com/max.schwaerzler/</string>
    <string name="open_in_app_icon_description">Open in app icon</string>
    <string name="share_memo_button_label">Share memo</string>
</resources>