<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/OverviewFragment">

    <fragment
        android:id="@+id/OverviewFragment"
        android:name="at.maximilian.memosyne.fragments.OverviewFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_overview">

        <action
            android:id="@+id/action_OverviewFragment_to_AddMemoFragment"
            app:destination="@id/AddMemoFragment" />
        <action
            android:id="@+id/action_OverviewFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_OverviewFragment_to_AboutMeFragment"
            app:destination="@id/AboutMeFragment" />
    </fragment>
    <fragment
        android:id="@+id/AddMemoFragment"
        android:name="at.maximilian.memosyne.fragments.AddMemoFragment"
        android:label="@string/add_memo_fragment_label"
        tools:layout="@layout/fragment_add_memo" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="at.maximilian.memosyne.fragments.SettingsFragment"
        android:label="@string/settings_fragment_label" />
    <fragment
        android:id="@+id/AboutMeFragment"
        android:name="at.maximilian.memosyne.fragments.AboutMeFragment"
        android:label="@string/about_me_menu_title"
        tools:layout="@layout/fragment_about_me" />
</navigation>