<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddMemoFragment">

    <EditText
        android:id="@+id/editText_memoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/memo_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_memoContent"
        android:hint="@string/memo_content_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:inputType="textMultiLine|text"
        android:gravity="top|start"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/editText_memoTitle"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_new_memo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_add_new_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/add_a_new_memo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>